Add placeholder textures

--- a/common/src/main/resources/assets/multiblockmachine/lang/en_us.json
+++ b/common/src/main/resources/assets/multiblockmachine/lang/en_us.json
@@ -5,11 +5,15 @@
   "block.multiblockmachine.item_output_slot": "Item Output Slot",
   "block.multiblockmachine.energy_input_slot": "Energy Input Slot",
   "block.multiblockmachine.energy_output_slot": "Energy Output Slot",
+  "block.multiblockmachine.fluid_input_slot": "Fluid Input Slot",
+  "block.multiblockmachine.fluid_output_slot": "Fluid Output Slot",
   "item.multiblockmachine.machine_item": "Multiblock Machine",
   "container.multiblockmachine.item_input_slot": "Item Input Slot",
   "container.multiblockmachine.item_output_slot": "Item Output Slot",
   "container.multiblockmachine.energy_input_slot": "Energy Input Slot",
   "container.multiblockmachine.energy_output_slot": "Energy Output Slot",
+  "container.multiblockmachine.fluid_input_slot": "Fluid Input Slot",
+  "container.multiblockmachine.fluid_output_slot": "Fluid Output Slot",
   "text.multiblockmachine.not_formed": "Machine not detected, please check whether the structure is complete and the direction of the controller!",
   "text.multiblockmachine.fluid_tank": "%s: %s mB",
   "text.multiblockmachine.recipe": "Multiblock Machine",
