--- a/common/src/main/resources/assets/multiblockmachine/lang/zh_cn.json
+++ b/common/src/main/resources/assets/multiblockmachine/lang/zh_cn.json
@@ -5,11 +5,15 @@
   "block.multiblockmachine.item_output_slot": "物品输出槽",
   "block.multiblockmachine.energy_input_slot": "能量输入槽",
   "block.multiblockmachine.energy_output_slot": "能量输出槽",
+  "block.multiblockmachine.fluid_input_slot": "流体输入槽",
+  "block.multiblockmachine.fluid_output_slot": "流体输出槽",
   "item.multiblockmachine.machine_item": "多方块机器",
   "container.multiblockmachine.item_input_slot": "物品输入槽",
   "container.multiblockmachine.item_output_slot": "物品输出槽",
   "container.multiblockmachine.energy_input_slot": "能量输入槽",
   "container.multiblockmachine.energy_output_slot": "能量输出槽",
+  "container.multiblockmachine.fluid_input_slot": "流体输入槽",
+  "container.multiblockmachine.fluid_output_slot": "流体输出槽",
   "text.multiblockmachine.not_formed": "未检测到机器，请检查结构是否完整以及控制器的方向是否正确！",
   "text.multiblockmachine.fluid_tank": "%s: %s mB",
   "text.multiblockmachine.recipe": "多方块机器",
